welcome.lessons.welcome.methods.slug.SlugSnail.scala.error
SlugSnail:12: error: not found: value vert
			vert=true;
                        ^SlugSnail:18: error: not found: value vert
	return vert; 
               ^