welcome.lessons.welcome.methods.slug.SlugSnail.scala.code
    def hunt(c:Color) {
        // Write your code here
    }
   
def isFacingTrail():Boolean = {
	var rose:Boolean=false;
	if(!estFaceMur) {
		avance()
		if (getCouleurSol()==Color.PINK) {
			recule()
			vert=true;
		} else { 
			recule()
			rose=false;	
	}
	}
	return vert; 
    // Write your code here
}        
    // here comes your isFacingTrail method   

